--- a/composer.json
+++ b/composer.json
@@ -60,5 +60,12 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    }
+    },
+    "require": { 
+        "UniSharp/laravel-ckeditor": "dev-patch-1#a5b24c9f7cc52db1ee976fc4586cae968f364c3c" 
+    }, 
+    "repositories": [ { "type": "vcs", 
+        "url": "https://github.com/UniSharp/laravel-ckeditor.git" }, 
+        { "type": "vcs", "url": "https://github.com/lloricode/laravel-ckeditor.git" } ]
+
 }
